<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.freerschool.report_it_fix_it.FixStuff"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="fixIt"
        android:text="Fix It!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonCamera"
        android:layout_width="81dp"
        android:layout_height="66dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="TakePictureOnClick"
        app:layout_constraintBottom_toTopOf="@+id/buttonSelect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFixIt"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageView
        android:id="@+id/imageViewFixIt"
        android:layout_width="122dp"
        android:layout_height="76dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toEndOf="@+id/progress_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/holo_blue_dark" />

    <Button
        android:id="@+id/buttonSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/select_from_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonCamera" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/location_address_view"
        android:layout_width="116dp"
        android:layout_height="87dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="5dp"
        android:text="Location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <Spinner
        android:id="@+id/spinnerWrong"
        android:layout_width="205dp"
        android:layout_height="26dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelect" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:paddingTop="5dp"
        android:text="@string/description_of_problem"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintRight_toLeftOf="@+id/guidelineLabels"
        app:layout_constraintTop_toBottomOf="@+id/textViewProblem" />

    <TextView
        android:id="@+id/textViewProblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="5dp"
        android:paddingTop="5dp"
        android:text="@string/what_s_wrong"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintRight_toLeftOf="@+id/guidelineLabels"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelect" />

    <TextView
        android:id="@+id/textViewBuilding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingTop="5dp"
        android:text="@string/closest_building"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintRight_toLeftOf="@+id/guidelineLabels"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

    <EditText
        android:id="@+id/editTextProblem"
        android:layout_width="203dp"
        android:layout_height="75dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerWrong" />

    <TextView
        android:id="@+id/textViewRoom"
        android:layout_width="119dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="40dp"
        android:gravity="right"
        android:text="@string/exact_room_if_possible"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guidelineLabels"
        app:layout_constraintTop_toBottomOf="@+id/textViewBuilding"
        app:layout_constraintVertical_bias="0.025" />

    <EditText
        android:id="@+id/editTextRoom"
        android:layout_width="201dp"
        android:layout_height="46dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/room"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/guidelineRoom"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinnerBuilding"
        android:layout_width="203dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextRoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toEndOf="@+id/textViewBuilding"
        app:layout_constraintTop_toBottomOf="@+id/editTextProblem" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="505dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.34" />

</android.support.constraint.ConstraintLayout>
